<resources>
    <string name="app_name">Traccar Manager</string>
    <string name="app_login">Login</string>
    <string name="app_loading">Loading…</string>

    <string name="shared_second">Second</string>
    <string name="shared_minute">Minute</string>
    <string name="shared_hour">Hour</string>

    <string name="error_connection">Connection error</string>
    <string name="error_general">Server request error</string>
    <string name="error_invalid_url">Invalid server URL</string>
    <string name="error_invalid_frequency">Frequency must be a valid number</string>

    <string name="devices_title">Devices</string>
    <string name="confirmation_title">Are you sure?</string>
    <string name="edit_device_title">Edit device</string>
    <string name="send_command_title">Send command</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>

    <string name="settings_url">Server</string>
    <string name="settings_email">Email</string>
    <string name="settings_password">Password</string>

    <string name="user_kn">kn</string>
    <string name="user_kmh">km/h</string>
    <string name="user_mph">mph</string>

    <string name="device_name">Name</string>
    <string name="device_identifier">Identifier</string>
    <string name="device_group">Group</string>
    <string name="device_save">Save</string>
    <string name="device_created">Device has been created</string>
    <string name="device_updated">Device has been updated</string>
    <string name="device_removed">Device has been removed</string>

    <string name="position_time">Time</string>
    <string name="position_latitude">Latitude</string>
    <string name="position_longitude">Longitude</string>
    <string name="position_speed">Speed</string>
    <string name="position_altitude">Altitude</string>
    <string name="position_course">Course</string>

    <string name="action_edit_device">Edit</string>
    <string name="action_remove_device">Remove</string>
    <string name="action_show_on_map">Show on map</string>
    <string name="action_send_command">Send command</string>

    <string name="command_command">Command</string>
    <string name="command_frequency_frequency">Frequency</string>
    <string name="command_frequency_unit">Unit</string>
    <string name="command_send">Send</string>
    <string name="command_sent">Command has been sent</string>

    <string name="command_alarm_arm">Arm</string>
    <string name="command_alarm_disarm">Disarm</string>
    <string name="command_engine_stop">Engine Stop</string>
    <string name="command_engine_resume">Engine Resume</string>
    <string name="command_position_periodic">Periodic Reporting</string>
    <string name="command_frequency">Frequency</string>
</resources>
